--- a/package.json
+++ b/package.json
@@ -1,26 +1,24 @@
 {
-  "name": "moviebass",
+  "name": "CraftWorks-Backend",
   "version": "1.0.0",
-  "description": "Movie backend as a service",
+  "description": "CraftWorks backend as a service",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://bitbucket.org/sebischair/sebamaster-movie-backend"
+    "url": "https://github.com/pulakchakraborty/Internal-CraftWorks-Backend"
   },
   "keywords": [
-    "movie-backend",
-    "seba",
-    "master"
+    "CraftWorks-backend"
   ],
-  "author": "sebis",
+  "author": "Pulak Chakraborty",
   "license": "ISC",
   "bugs": {
-    "url": "https://bitbucket.org/sebischair/sebamaster-movie-backend"
+    "url": "https://github.com/pulakchakraborty/Internal-CraftWorks-Backend"
   },
-  "homepage": "https://bitbucket.org/sebischair/sebamaster-movie-backend#readme",
+  "homepage": "https://github.com/pulakchakraborty/Internal-CraftWorks-Backend#readme",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
