Changes in the backend for image upload - connect-multiparty npm package added - controller for Product post route modified to handle the image upload - image gets uploaded in a tmp directory in the beginning and then copied to CraftWorks-Frontend/src/assets/img/products/ directory - make sure you add a tmp directory in your local

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
+    "connect-multiparty": "^2.0.0",
     "cors": "^2.7.1",
     "express": "^4.13.4",
     "express-unless": "^0.3.0",
